--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r characters that Git won't match properly
+_[^/]*\r$
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
